// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiagnosesForm Snapshot Tests empty form matches snapshot 1`] = `
<div>
  <div
    class="cds--tile"
  >
    <div>
      DIAGNOSES_FORM_TITLE
    </div>
    <div
      class="cds--list-box__wrapper"
    >
      <div
        class="cds--combo-box cds--autoalign cds--list-box cds--list-box--lg"
      >
        <div
          class="cds--list-box__field"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="downshift-«r33»-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="DIAGNOSES_SEARCH_ARIA_LABEL"
            autocomplete="off"
            class="cds--text-input cds--text-input--empty"
            id="diagnoses-search"
            placeholder="DIAGNOSES_SEARCH_PLACEHOLDER"
            role="combobox"
            tabindex="0"
            title=""
            type="text"
            value=""
          />
          <button
            aria-controls="downshift-«r33»-menu"
            aria-expanded="false"
            aria-label="Open"
            class="cds--list-box__menu-icon"
            id="downshift-«r33»-toggle-button"
            tabindex="-1"
            title="Open"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
          </button>
        </div>
        <ul
          aria-labelledby="downshift-«r33»-label"
          class="cds--list-box__menu"
          id="downshift-«r33»-menu"
          role="listbox"
          style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DiagnosesForm Snapshot Tests form with errors matches snapshot 1`] = `
<div>
  <div
    class="cds--tile"
  >
    <div>
      DIAGNOSES_FORM_TITLE
    </div>
    <div
      class="cds--list-box__wrapper"
    >
      <div
        class="cds--combo-box cds--autoalign cds--list-box cds--list-box--lg"
      >
        <div
          class="cds--list-box__field"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="downshift-«r3j»-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="DIAGNOSES_SEARCH_ARIA_LABEL"
            autocomplete="off"
            class="cds--text-input cds--text-input--empty"
            id="diagnoses-search"
            placeholder="DIAGNOSES_SEARCH_PLACEHOLDER"
            role="combobox"
            tabindex="0"
            title=""
            type="text"
            value=""
          />
          <button
            aria-controls="downshift-«r3j»-menu"
            aria-expanded="false"
            aria-label="Open"
            class="cds--list-box__menu-icon"
            id="downshift-«r3j»-toggle-button"
            tabindex="-1"
            title="Open"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
          </button>
        </div>
        <ul
          aria-labelledby="downshift-«r3j»-label"
          class="cds--list-box__menu"
          id="downshift-«r3j»-menu"
          role="listbox"
          style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
        />
      </div>
    </div>
    <div
      class="cds--inline-notification cds--inline-notification--low-contrast cds--inline-notification--error"
      role="alert"
    >
      <div
        class="cds--inline-notification__details"
      >
        <svg
          aria-hidden="true"
          class="cds--inline-notification__icon"
          fill="currentColor"
          focusable="false"
          height="20"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10,1c-5,0-9,4-9,9s4,9,9,9s9-4,9-9S15,1,10,1z M13.5,14.5l-8-8l1-1l8,8L13.5,14.5z"
          />
          <path
            d="M13.5,14.5l-8-8l1-1l8,8L13.5,14.5z"
            data-icon-path="inner-path"
            opacity="0"
          />
          <title>
            error icon
          </title>
        </svg>
        <div
          class="cds--inline-notification__text-wrapper"
        >
          <div
            class="cds--inline-notification__title"
            dir="auto"
          >
            Search failed
          </div>
        </div>
      </div>
      <button
        aria-label="close notification"
        class="cds--inline-notification__close-button"
        title="close notification"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="cds--inline-notification__close-icon"
          fill="currentColor"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`DiagnosesForm Snapshot Tests form with search results matches snapshot 1`] = `
<div>
  <div
    class="cds--tile"
  >
    <div>
      DIAGNOSES_FORM_TITLE
    </div>
    <div
      class="cds--list-box__wrapper"
    >
      <div
        class="cds--combo-box cds--autoalign cds--list-box cds--list-box--lg"
      >
        <div
          class="cds--list-box__field"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="downshift-«r36»-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="DIAGNOSES_SEARCH_ARIA_LABEL"
            autocomplete="off"
            class="cds--text-input cds--text-input--empty"
            id="diagnoses-search"
            placeholder="DIAGNOSES_SEARCH_PLACEHOLDER"
            role="combobox"
            tabindex="0"
            title=""
            type="text"
            value=""
          />
          <button
            aria-controls="downshift-«r36»-menu"
            aria-expanded="false"
            aria-label="Open"
            class="cds--list-box__menu-icon"
            id="downshift-«r36»-toggle-button"
            tabindex="-1"
            title="Open"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
          </button>
        </div>
        <ul
          aria-labelledby="downshift-«r36»-label"
          class="cds--list-box__menu"
          id="downshift-«r36»-menu"
          role="listbox"
          style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DiagnosesForm Snapshot Tests form with selected diagnoses matches snapshot 1`] = `
<div>
  <div
    class="cds--tile"
  >
    <div>
      DIAGNOSES_FORM_TITLE
    </div>
    <div
      class="cds--list-box__wrapper"
    >
      <div
        class="cds--combo-box cds--autoalign cds--list-box cds--list-box--lg"
      >
        <div
          class="cds--list-box__field"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="downshift-«r39»-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="DIAGNOSES_SEARCH_ARIA_LABEL"
            autocomplete="off"
            class="cds--text-input cds--text-input--empty"
            id="diagnoses-search"
            placeholder="DIAGNOSES_SEARCH_PLACEHOLDER"
            role="combobox"
            tabindex="0"
            title=""
            type="text"
            value=""
          />
          <button
            aria-controls="downshift-«r39»-menu"
            aria-expanded="false"
            aria-label="Open"
            class="cds--list-box__menu-icon"
            id="downshift-«r39»-toggle-button"
            tabindex="-1"
            title="Open"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
          </button>
        </div>
        <ul
          aria-labelledby="downshift-«r39»-label"
          class="cds--list-box__menu"
          id="downshift-«r39»-menu"
          role="listbox"
          style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
        />
      </div>
    </div>
    <div
      aria-label="DIAGNOSES_ADDED_DIAGNOSES"
      class="cds--css-grid cds--css-grid--narrow cds--css-grid--full-width"
      data-testid="box-w-title"
      role="region"
    >
      <div
        class="cds--sm:col-span-4 cds--md:col-span-8 cds--lg:col-span-16 cds--xlg:col-span-16 cds--css-grid-column"
      >
        DIAGNOSES_ADDED_DIAGNOSES
      </div>
      <div
        class="cds--sm:col-span-4 cds--md:col-span-8 cds--lg:col-span-16 cds--xlg:col-span-16 cds--css-grid-column"
      >
        <div
          class="cds--subgrid cds--subgrid--narrow"
          data-testid="selected-item"
        >
          <div
            class="cds--sm:col-span-3 cds--md:col-span-7 cds--lg:col-span-15 cds--xlg:col-span-15 cds--css-grid-column"
          >
            <div
              class="cds--subgrid cds--subgrid--wide"
            >
              <div
                class="cds--sm:col-span-4 cds--md:col-span-7 cds--lg:col-span-11 cds--xlg:col-span-11 cds--css-grid-column"
              >
                Hypertension
              </div>
              <div
                class="cds--sm:col-span-4 cds--md:col-span-2 cds--lg:col-span-4 cds--xlg:col-span-4 cds--css-grid-column"
              >
                <div
                  class="cds--dropdown__wrapper cds--list-box__wrapper"
                  data-testid="diagnoses-certainty-dropdown-uuid-1"
                >
                  <div
                    class="cds--dropdown cds--autoalign cds--list-box"
                    id="diagnoses-certainty-dropdown-uuid-1"
                  >
                    <button
                      aria-activedescendant=""
                      aria-controls="downshift-«r3c»-menu"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="DIAGNOSES_CERTAINTY_ARIA_LABEL"
                      class="cds--list-box__field"
                      id="downshift-«r3c»-toggle-button"
                      role="combobox"
                      tabindex="0"
                      title="CERTAINITY_CONFIRMED"
                      type="button"
                    >
                      <span
                        class="cds--list-box__label"
                      >
                        CERTAINITY_CONFIRMED
                      </span>
                      <div
                        class="cds--list-box__menu-icon"
                      >
                        <svg
                          aria-label="Open menu"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          name="chevron--down"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                          />
                          <title>
                            Open menu
                          </title>
                        </svg>
                      </div>
                    </button>
                    <ul
                      aria-labelledby="downshift-«r3c»-label"
                      class="cds--list-box__menu"
                      id="downshift-«r3c»-menu"
                      role="listbox"
                      style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="cds--sm:col-span-1 cds--md:col-span-1 cds--lg:col-span-1 cds--xlg:col-span-1 cds--css-grid-column"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-label="SELECTED_ITEM_CLOSE_ARIA_LABEL"
                  class="cds--btn cds--btn--lg cds--layout--size-lg cds--btn--primary cds--btn--icon-only"
                  data-testid="selected-item-close-button"
                  id="close-selected-item"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-«r3e»"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  SELECTED_ITEM_CLOSE
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
